--- a/app/src/main/res/layout/return_product_cash_on_delivery_item.xml
+++ b/app/src/main/res/layout/return_product_cash_on_delivery_item.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/return_product_cash_on_delivery_item_card_view"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="470dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
     android:elevation="4dp"
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/return_product_cash_on_delivery_item_name" />
 
         <TextView
-            android:id="@+id/textViewOrderDate"
+            android:id="@+id/textViewDeliveryDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/return_product_cash_on_delivery_item_order_id" />
 
         <TextView
-            android:id="@+id/textViewOrderTime"
+            android:id="@+id/textViewDeliveryTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:text="TextView5"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOrderDate" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDate" />
 
         <TextView
             android:id="@+id/return_product_cash_on_delivery_item_delivery_time"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:text="TextView6"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOrderTime" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryTime" />
 
         <TextView
             android:id="@+id/textViewOrderID"
