--- a/app/src/main/res/layout/return_product_item_status.xml
+++ b/app/src/main/res/layout/return_product_item_status.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/return_product_item_status_card_view"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="570dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
     android:elevation="4dp"
@@ -62,24 +62,24 @@
             app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_name" />
 
         <TextView
-            android:id="@+id/textViewOrderDate"
+            android:id="@+id/textViewDeliveryDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Order Date"
+            android:text="Delivered Date"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_order_id" />
+            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_delivery_address" />
 
         <TextView
-            android:id="@+id/textViewOrderTime"
+            android:id="@+id/textViewDeliveryTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Order Time"
+            android:text="Delivered Time"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_order_date" />
+            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_delivered_date" />
 
         <TextView
             android:id="@+id/return_product_item_status_id"
@@ -116,20 +116,20 @@
             app:layout_constraintTop_toTopOf="@+id/return_product_item_status_warranty" />
 
         <TextView
-            android:id="@+id/return_product_item_status_order_date"
+            android:id="@+id/return_product_item_status_delivered_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView5"
+            android:text="TextView7"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOrderDate" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDate" />
 
         <TextView
-            android:id="@+id/return_product_item_status_order_time"
+            android:id="@+id/return_product_item_status_delivered_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView6"
+            android:text="TextView8"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOrderTime" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryTime" />
 
         <TextView
             android:id="@+id/textViewOrderID"
@@ -175,15 +175,51 @@
             android:text="Status"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_order_time" />
+            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_delivered_time" />
 
         <TextView
             android:id="@+id/return_product_item_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView7"
+            android:text="TextView9"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textView29" />
+
+        <TextView
+            android:id="@+id/textView46"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Delivery ID"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_order_id" />
+
+        <TextView
+            android:id="@+id/return_product_item_status_delivery_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView5"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/textView46" />
+
+        <TextView
+            android:id="@+id/textView49"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Delivery Address"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/return_product_item_status_delivery_id" />
+
+        <TextView
+            android:id="@+id/return_product_item_status_delivery_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView6"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/textView49" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
