--- a/app/src/main/res/layout/fragment_cust_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_cust_delivery_status.xml
@@ -10,21 +10,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeliveryStatusCustomer"
-        android:layout_width="407dp"
-        android:layout_height="392dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck"
-        tools:listitem="@layout/customer_view_delivery_status_layout" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewDeliveryStatusCustomer"
+            android:layout_width="413dp"
+            android:layout_height="402dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck"
+            tools:listitem="@layout/customer_view_delivery_status_layout" />
 
-    <TextView
+        <TextView
         android:id="@+id/outputOrderIdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
