--- a/app/src/main/res/layout/fragment_cust_delivery_status_credit_card.xml
+++ b/app/src/main/res/layout/fragment_cust_delivery_status_credit_card.xml
@@ -8,9 +8,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCustDeliveryCredit"
-        android:layout_width="406dp"
-        android:layout_height="299dp"
+        android:layout_width="412dp"
+        android:layout_height="307dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/delivery_status_products_credit_card" />
