--- a/app/src/main/res/layout/fragment_customer_feedback.xml
+++ b/app/src/main/res/layout/fragment_customer_feedback.xml
@@ -88,13 +88,13 @@
 
     <Button
         android:id="@+id/btnSubmit"
-        android:layout_width="368dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="44dp"
+        android:text="Submit"
         android:backgroundTint="#FDC12A"
-        android:text="@string/submit"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
