--- a/app/src/main/res/layout/fragment_password_forgot.xml
+++ b/app/src/main/res/layout/fragment_password_forgot.xml
@@ -56,7 +56,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnForgotPassword"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -75,10 +75,10 @@
         android:layout_marginTop="8dp"
         android:text="Don't have an account?"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="@+id/btnForgotPassword"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />
 
     <TextView
         android:id="@+id/signUp"
@@ -91,6 +91,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toEndOf="@+id/labelSignUp"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
