ruth - combine map for delivery module

--- a/app/src/main/res/layout/fragment_home_admin.xml
+++ b/app/src/main/res/layout/fragment_home_admin.xml
@@ -111,7 +111,7 @@
             android:layout_height="55dp"
             android:layout_marginStart="16dp"
             android:text="@string/adminViewFeedback"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewCustomerFeedback"
             app:layout_constraintStart_toStartOf="@+id/imageViewCustomerFeedback"
@@ -167,7 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Return Product \n Management"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="24dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewReturnProduct"
             app:layout_constraintStart_toStartOf="@+id/imageViewReturnProduct"
