--- a/app/src/main/res/layout/fragment_admin_delivery_management.xml
+++ b/app/src/main/res/layout/fragment_admin_delivery_management.xml
@@ -1,202 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".FragmentAdminDeliveryManagement">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="10">
+        <ImageView
+            android:id="@+id/imageViewCreateDeliveryCash"
+            android:layout_width="425dp"
+            android:layout_height="299dp"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:maxWidth="500dp"
+            android:maxHeight="300dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/cash_on_delivery"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAdminPanel"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-            <TextView
-                android:id="@+id/tvWelcome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginBottom="60dp"
-                android:textAlignment="center"
-                android:textColor="#F57C00"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView68"
+            android:layout_width="379dp"
+            android:layout_height="89dp"
+            android:layout_marginTop="8dp"
+            android:text="Create Delivery Status (Cash On Delivery)"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.312"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageViewCreateDeliveryCash" />
 
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="13dp"
-                android:layout_weight="8"
-                android:alignmentMode="alignMargins"
-                android:columnCount="2"
-                android:columnOrderPreserved="false"
-                android:padding="14dp"
-                android:rowCount="2">
+        <TextView
+            android:id="@+id/textViewAdminPanel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/admin_delivery_management"
+            android:textColor="#FDC12A"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextContrastCheck" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewCreateDeliveryStatus"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:clickable="true"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
+        <ImageView
+            android:id="@+id/imageviewCreateDeliveryCredit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:maxWidth="500dp"
+            android:maxHeight="300dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/create_delivery_pic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewCreateDeliveryCash"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textViewCredit"
+            android:layout_width="380dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="8dp"
+            android:lines="3"
+            android:text="Create Delivery Status(Credit Card )"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageviewCreateDeliveryCredit"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageviewCreateDeliveryCredit"
+            app:layout_constraintVertical_bias="0.091" />
 
-                        <ImageView
+        <ImageView
+            android:id="@+id/imageViewDeliveryStatus"
+            android:layout_width="414dp"
+            android:layout_height="243dp"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:contentDescription="Delivery Status Picture"
+            android:hint="LOL"
+            android:maxWidth="500dp"
+            android:maxHeight="300dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/view_all_delivery"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageviewCreateDeliveryCredit" />
 
-                            android:layout_width="130dp"
-                            android:layout_height="85dp"
-                            app:srcCompat="@drawable/ic_baseline_home_24" />
+        <TextView
+            android:id="@+id/imageViewAllDeliveryStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="148dp"
+            android:lines="3"
+            android:text="View All Delivery Status"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageviewCreateDeliveryCredit" />
 
-                        <TextView
-                            android:layout_width="128dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="20dp"
-                            android:text="Delivery Status"
-                            android:textSize="17dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/viewAllDeliveryStatus"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-
-                            android:layout_width="130dp"
-                            android:layout_height="85dp"
-                            app:srcCompat="@drawable/ic_baseline_home_24" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="1dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="1dp"
-                            android:text="View All Delivery Status"
-                            android:textSize="17dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewDeliveryStatusCreditCard"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-
-                            android:layout_width="120dp"
-                            android:layout_height="85dp"
-                            app:srcCompat="@drawable/ic_baseline_home_24" />
-
-                        <TextView
-                            android:layout_width="150dp"
-                            android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
-                            android:text="Delivery Status (Credit Card Payment)"
-                            android:textSize="17dp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <!-- Column 2 -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/signOutCardView"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical">
-
-                        <ImageView
-
-                            android:layout_width="85dp"
-                            android:layout_height="85dp"
-                            app:srcCompat="@drawable/ic_baseline_home_24" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="15dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="15dp"
-                            android:textSize="17dp"
-                            android:textStyle="bold" />
-
-
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-            </GridLayout>
-
-        </LinearLayout>
-    </LinearLayout>
-</layout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
