--- a/app/src/main/res/layout/fragment_admin_view_all_delivery_status_credit_card.xml
+++ b/app/src/main/res/layout/fragment_admin_view_all_delivery_status_credit_card.xml
@@ -2,28 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout9"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentAdminViewAllDeliveryStatus">
+    tools:context=".FragmentAdminViewAllDeliveryStatusCreditCard" >
 
     <TextView
-        android:id="@+id/textView67"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView66"
+        android:layout_width="402dp"
+        android:layout_height="65dp"
         android:layout_marginTop="16dp"
-        android:text="Delivery Status(Cash On Delivery)"
+        android:text="Delivery Status(Credit Card Payment)"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/deliveryStatusRecyclerView"
+        android:id="@+id/recyclerViewDeliveryCredit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView67"
-        tools:listitem="@layout/delivery_status_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/textView66"
+        tools:listitem="@layout/delivery_status_credit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
