--- a/app/src/main/res/layout/rate_delivery.xml
+++ b/app/src/main/res/layout/rate_delivery.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
             <RatingBar
-                android:id="@+id/ratingBar2"
+                android:id="@+id/ratingBarRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -72,7 +72,7 @@
                 android:textColor="#000000"
                 app:cornerRadius="50dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />
+                app:layout_constraintTop_toBottomOf="@+id/ratingBarRate" />
 
             <Button
                 android:id="@+id/buttonRate"
@@ -85,7 +85,7 @@
                 android:textColor="#000000"
                 app:cornerRadius="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />
+                app:layout_constraintTop_toBottomOf="@+id/ratingBarRate" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
