--- a/app/src/main/res/layout/fragment_cust_select_order_cash_on_delivery_view_delivery_tracker.xml
+++ b/app/src/main/res/layout/fragment_cust_select_order_cash_on_delivery_view_delivery_tracker.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="16dp"
         android:text="Delivery Tracker"
         android:textSize="20sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,10 +45,12 @@
 
     <Button
         android:id="@+id/buttonYes"
-        android:layout_width="235dp"
-        android:layout_height="48dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="View Location"
+        android:textColor="@color/black"
+        android:backgroundTint="#FDC12A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,16 +80,18 @@
         android:id="@+id/textView6"
         android:layout_width="355dp"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:text="Select the order you would want to view its current location"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+        android:layout_width="265dp"
+        android:layout_height="227dp"
         android:layout_marginTop="12dp"
         android:src="@drawable/picture_delivery"
         app:layout_constraintEnd_toEndOf="parent"
